upd: version 1.0